--- a/desafio02/style.css
+++ b/desafio02/style.css
@@ -111,6 +111,13 @@ button {
     
 }
 
+button:hover {
+    cursor: pointer;
+    background-color: hsl(228, 12%, 48%);
+
+}
+
 .perfume-desktop {
     display: none;
+    
 }
