--- a/desafio04/mobile.css
+++ b/desafio04/mobile.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Fraunces:opsz,wght@9..144,700&family=Lexend+Deca&display=swap');
+
+/*font-family: 'Big Shoulders Display', cursive;*/
+/*font-family: 'Lexend Deca', sans-serif;*/
+
 body {
     background-color: white;
     display: flex;
@@ -18,22 +23,64 @@ main {
     justify-content: center;
     align-items: center;
     max-width: 415px;
-    height: 80vh;
     margin: 3rem 1rem;
+    border-radius: 2rem;
 }
+
+
 
 main article {
     display: flex;
     flex-direction: column;
+    padding: 4rem;
     
 }
 
+main article h1 {
+    color: white;
+    text-transform: uppercase;
+    padding-bottom: 2rem;
+    font-family: 'Lexend Deca', sans-serif;
+    font-weight: 700;
+
+}
+
+main article p {
+    color:hsla(0, 0%, 100%, 0.75);
+    font-family: 'Big Shoulders Display', cursive;
+    font-weight: 500;
+    padding-bottom: 2rem;
+    font-size: 18px;
+}
+
+main article button {
+    padding: 1.5rem;
+    border-radius: 2rem;
+    border: none;
+    max-width: 200px;
+    cursor: pointer;
+}
+
+.btn01 {
+    color: hsl(31, 77%, 52%);;
+}
+
+.btn02 {
+    color:hsl(184, 100%, 22%);
+}
+
+.btn03 {
+    color: hsl(179, 100%, 13%);;
+}
 main article img {
     width: 50px;
+    padding-bottom: 1.5rem;
 }
 
 main article.article-01 {
     background-color: hsl(31, 77%, 52%);
+    border-radius: 1rem 1rem 0 0;
+    
 }
 
 main article.article-02 {
@@ -42,4 +89,5 @@ main article.article-02 {
 
 main article.article-03 {
     background-color: hsl(179, 100%, 13%);
+    border-radius: 0 0 1rem 1rem;
 }
