--- a/desafio04/mediaquery.css
+++ b/desafio04/mediaquery.css
@@ -21,5 +21,19 @@
         justify-content: center;
         min-width: 415px;
         height: 100vh;
+        
+    }
+
+    main article {
+        min-width: 300px;
+        max-width: 415px;
+    }
+
+    main article.article-01 {
+        border-radius: 1rem 0rem 0rem 1rem;
+    }
+
+    main article.article-03 {
+        border-radius: 0 1rem 1rem 0;
     }
 }
