--- a/desafio07/mobile.css
+++ b/desafio07/mobile.css
@@ -18,11 +18,12 @@ body {
 }
 header {
     width: 80%;
-    margin: 3rem 1rem;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 2rem;
 }
 header .h1 {
     color: hsl(229, 6%, 66%);
@@ -47,9 +48,8 @@ body {
 }
 
 main {
-    max-width: 415px;
-    width: 80%;
-    margin: 2rem;
+    min-width: 375px;
+    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -58,7 +58,7 @@ main {
 
 main article {
     height: 200px;
-    width: 300px;
+    max-width: 300px;
     margin: 0rem 2rem 2rem 2rem ;
     border: none;
     box-shadow: 2px 1px 10px rgba(0, 0, 0, 0.219);
@@ -104,14 +104,16 @@ main article.art-04 {
 
 footer {
     border-radius: 1rem;
-    border-top:  0.2rem solid hsl(212, 86%, 64%); 
-    border-right: 0.2rem solid hsl(34, 97%, 64%);
-    border-bottom: 0.2rem solid hsl(0, 78%, 62%);
+    border-right:  0.2rem solid hsl(212, 86%, 64%); 
+    border-bottom: 0.2rem solid hsl(34, 97%, 64%);
+    border-top: 0.2rem solid hsl(0, 78%, 62%);
     border-left: 0.2rem solid hsl(180, 62%, 55%);
     padding: 1rem;
     max-width: 300px;
     text-align: center;
     margin: auto;
+    font-size: 1rem;
+    display: none;
 
 }
 
