--- a/desafio07/mediaquery.css
+++ b/desafio07/mediaquery.css
@@ -6,9 +6,17 @@
     box-sizing: border-box;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:900px) {
 
+    body {
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     header {
+        margin: auto;
         padding-top: 2rem 0rem;
 
     }
@@ -25,6 +33,7 @@
     }
 
     footer {
+        margin: auto;
         display: block;
     }
 }
