--- a/desafio07/mediaquery.css
+++ b/desafio07/mediaquery.css
@@ -16,8 +16,9 @@
         justify-content: center;
     }
     header {
+        width: 100vw;
         margin: auto;
-        padding-top: 2rem 0rem;
+        padding-top: 2rem;
 
     }
 
@@ -33,6 +34,7 @@
     }
 
     footer {
+        
         margin: auto;
         display: block;
     }
