--- a/desafio05/mobile.css
+++ b/desafio05/mobile.css
@@ -105,6 +105,13 @@ button {
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.418);
 }
 
+button:hover {
+    cursor: pointer;
+    color: hsla(179, 62%, 43%, 0.644);
+    font-size: 1.5em;
+    
+}
+
 main article.art-03 {
     background-color: hsla(179, 62%, 43%, 0.726);
     border-radius: 0 0 1rem 1rem;
@@ -115,12 +122,6 @@ main article .p-03 {
     color: rgba(255, 255, 255, 0.678);
 }
 
-footer {
-    min-width: 415px;
-    height: 2rem;
-    margin-bottom: 2rem;
-    padding: 2rem;
-}
 
 
 
