--- a/desafio05/mediaquery.css
+++ b/desafio05/mediaquery.css
@@ -4,7 +4,7 @@
     main {
        min-width: 760px;
        height: 100vh;
-       transition: all 0.6s;
+       transition: all ease-in 0.6s;
         
     }
 
