--- a/desafio05/mobile.css
+++ b/desafio05/mobile.css
@@ -68,7 +68,6 @@ main article.art-02 {
     background-color: hsl(179, 62%, 43%);
     display: flex;
     flex-direction: column;
-    align-items: ;
     justify-content: center;
 }
 
@@ -110,6 +109,7 @@ button:hover {
     color: hsl(179, 62%, 43%);
     font-size: 1.5em;
     text-transform: uppercase;
+    transition: all ease-in 0.3s;
     
 }
 
