--- a/desafio06/mobile.css
+++ b/desafio06/mobile.css
@@ -29,99 +29,41 @@ body {
 header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    min-width: 400px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-
+    margin: 2rem 0 0 2rem;
+    
 }
 
 header h1 {
-    margin: 2rem 0 0 0rem;
-
+    font-size: 2em;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
 }
 
-#icon-msg {
-    width: 2rem;
-    height: 2rem;
-    margin: 2rem 0 0 2rem;
+header #icon-msg {
+    font-size: 2em;
+    padding-right: 2rem;
 }
-
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+
+main div.img {
     min-width: 400px;
-    height: 768px;
-    
 }
 
-main article {
-    min-width: 376px;
-}
-
-main article.art-top {
-    height: 40%;
-    width: 100%;
-}
-
-main article img {
-    height: 245px;
-    position: relative;
-    top: 3.5rem;
-    left: 10%;
+main img {
+    width:80%;
+    margin: 4rem 3rem;
 }
 
 main article.art-bottom {
-    height: 60%;
-    padding: 4rem;
+    background-color: aqua;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-
-}
-
-main article h1 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    padding-bottom: 1rem;
-    line-height: 2rem;
-    text-align: center;
-}
-
-main article p {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    line-height: 1.5rem;
-    text-align: center;
-    padding-bottom: 2rem;
-    
-}
-
-button {
-    width: 15rem;
-    height: 3rem;
-    border-radius: 2rem;
-    border: none;
-    box-shadow: 1px 1px 20px hsla(257, 93%, 45%, 0.623);
-    color: hsl(257, 40%, 49%);
-    font-weight: 200;
-    margin: 1.5rem;
-}
-
-aside {
-    min-width: 400px;
-    height: 2rem;
-    display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-    margin-bottom: 2rem;
-}
-
-.logo {
-    width: 30px;
-    height: 30px;
+    margin: 2rem;
 }
