--- a/desafio06/mobile.css
+++ b/desafio06/mobile.css
@@ -22,8 +22,6 @@ body {
     background-size: contain;
     background-color: hsl(257, 40%, 49%);
     color: white;
-    
-    
 }
 
 header {
@@ -48,10 +46,11 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 }
 
 main div.img {
-    min-width: 400px;
+    max-width: 400px;
 }
 
 main img {
@@ -60,10 +59,54 @@ main img {
 }
 
 main article.art-bottom {
-    background-color: aqua;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 2rem;
+}
+
+main article.art-bottom > h1 {
+    font-size: 1.5em;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 2.5rem;
+    align-items: center;
+    margin: 0 3rem;
+    padding-bottom: 2rem;
+}
+
+main article.art-bottom > p {
+    font-family: 'Open Sans', sans-serif;
+    font-size:  1.2em ;
+    font-weight: 100;
+    text-align: center;
+    line-height: 1.2em;
+}
+
+main button {
+    color: hsl(257, 40%, 49%);
+    font-weight: bold;
+    width: 200px;
+    height: 2.5rem;
+    margin-top: 2rem;
+    border-radius: 1rem;
+    border: none;
+    box-shadow: 1px 1px 10px hsl(257, 64%, 42%) ;
+}
+
+aside {
+    width: 100%;
+    height: 3rem;
+    text-align: center;
+    margin: 3rem 0;
+}
+
+.logo {
+    border: 1px solid white;
+    border-radius: 50%;
+    background-color: hsl(257, 40%, 49%);
+    width:40px;
+    height: 40px;
+    margin: 0.5rem;
 }
