--- a/desafio06/mediaquery.css
+++ b/desafio06/mediaquery.css
@@ -1,5 +1,41 @@
+
+@media screen and (min-width:991px) {
+    body {
+        background-image: url(images/bg-desktop.svg);
+        background-size: cover;
+    }
+    main {
+        flex-direction: row;
+        height: 60vh;
+        
+    }
+
+    main div.img {
+        max-width: 1400px;
+    }
+    .art-top {
+        width: 40vw;
+        height: 100%;
+    }
+
+    main img {
+        margin: 2rem ;
+    }
+
+    main article.art-bottom {
+        height: 100%;
+        min-width: 50vw;
+        align-items: flex-start;
+        line-height: 1.5rem;
+    }
+
+    aside {
+       display: flex;
+    }
+}
+
 @media screen and (min-width:600px) and (max-width:990px) {
-    
+   /*Tela para tablet*/
     body {
         background-image: url(images/bg-desktop.svg);
     }
@@ -27,3 +63,6 @@
         margin: 0rem;
     }
     
+    main p {
+        margin: 0 3rem;
+    }
