--- a/desafio06/mobile.css
+++ b/desafio06/mobile.css
@@ -47,6 +47,7 @@ main {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    transition: width 0.3s, height 0.2s;
 }
 
 main div.img {
@@ -96,18 +97,11 @@ main button {
     box-shadow: 1px 1px 10px hsl(257, 64%, 42%) ;
 }
 
-aside {
-    width: 100%;
-    height: 3rem;
-    text-align: center;
-    margin: 3rem 0;
-}
-
 .logo {
     border: 1px solid white;
     border-radius: 50%;
     background-color: hsl(257, 40%, 49%);
-    width:40px;
-    height: 40px;
-    margin: 0.5rem;
+    width:30px;
+    height: 30px;
+    margin: 2rem 0.5rem 
 }
