--- a/desafio08/mobile.css
+++ b/desafio08/mobile.css
@@ -12,8 +12,9 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: hsl(185, 75%, 39%);
-    background-image: url(images/bg-pattern-bottom.svg);
-    background-position: top left;
+    background-image: url(images/bg-pattern-top.svg);
+    background-position: right 51vw bottom 50vh, left 45vw top 50vh ;
+    background-repeat: repeat-x;
     display: flex;
     align-items: center;
     justify-content: center;
