--- a/desafio09/mobile.css
+++ b/desafio09/mobile.css
@@ -23,20 +23,18 @@ body {
 }
 
 main {
-    max-width: 375px;
-    height: 88vh;
+    min-width: 375px;
+    max-width: 600px;
     background-color: hsl(244, 38%, 16%);
     border-radius: 0.6rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 2rem 1rem;
 }
 
-main section {
-    height: 40%;
-    max-width: 375px;
-}
+
 
 main section.img-top > img {
     width:100%;
@@ -49,7 +47,7 @@ main section.center {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height:35%;
+    height:30%;
     width: 100%;
 }
 
