--- a/desafio09/mobile.css
+++ b/desafio09/mobile.css
@@ -74,7 +74,7 @@ main section.center > p {
 }
 
 main section.final .c-t-q {
-    padding: 1rem;
+    padding: 1rem 2rem 3rem  2rem;
     text-align: center;
     text-transform: uppercase;
     font-family: 'Inter', sans-serif; ; 
