--- a/desafio09/mobile.css
+++ b/desafio09/mobile.css
@@ -15,7 +15,6 @@
 body {
     background-color: hsl(233, 47%, 7%);
     width: 100vw;
-    height: 100vh;
     font-size: 14px;
     display: flex;
     justify-content: center;
@@ -24,19 +23,22 @@ body {
 
 main {
     max-width: 600px;
-    max-height: 800px;
     background-color: hsl(244, 38%, 16%);
     border-radius: 0.6rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin:0rem 1rem ;
+    margin:2rem 1rem;
 }
 
 main section.img-top {
     height: 40%;
     width: 100%;
+}
+
+.img-desktop {
+    display: none;
 }
 
 main section.img-top > img {
