--- a/desafio09/mediaquery.css
+++ b/desafio09/mediaquery.css
@@ -2,7 +2,7 @@
     main {
         display: flex;
         flex-direction: row-reverse;
-        align-items: center;
+        align-items: left;
         justify-content: center;
         max-width: 1000px;
         height:420px;
@@ -25,6 +25,7 @@
 
     main section.center {
         min-width: 480px;
+        margin: 1rem 2rem;
     }
 
     main section.center .c-t-q {
