--- a/desafio10/mediaquery.css
+++ b/desafio10/mediaquery.css
@@ -1,6 +1,13 @@
-@media screen and (min-width:1000px) and (max-width:1800px) {
+@media screen and (min-width:1050px) and (max-width:1980px) {
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: hsl(303, 10%, 53%);
+    }
+    
     main {
-        min-width: 1000px;
+        max-width: 1200px;
         height: 700px;
         background-color: white;
         border-radius: 1rem;
@@ -18,6 +25,7 @@
     main section.top .header {
         width: 30%;
         padding-left: 4rem;
+
     }
 
     main section.top .rated-star {
