--- a/desafio10/mobile.css
+++ b/desafio10/mobile.css
@@ -19,16 +19,14 @@
 body {
     width: 100vw;
     height: 100vh;
-    background-color:var(--color-04);
+    background-color: white;
     font-size: 15px;
     font-family: 'League Spartan', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 main {
     width: 90vw;
     margin: 4rem 2rem;
+    
 }
 
 main section {
@@ -79,7 +77,7 @@ main section.bottom {
 
 main section.bottom .person-card {
     background-color: var(--color-01);
-    max-width: 300px;
+    max-width: 350px;
     border-radius: 0.5rem;
     margin-bottom: 1rem;
     padding: 1.5rem;
