--- a/desafio12/mediaquery.css
+++ b/desafio12/mediaquery.css
@@ -1,3 +1,48 @@
-@media screen and (min-width:1000px) {
+@media screen and (min-width:992px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
 
+    main {
+        width: 80vw;
+        height: 80vh;
+        background-color: orange;
+        display: grid;
+        grid-template-columns: repeat(4,25%);
+        grid-template-rows: repeat(5,20%);
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+    }
+
+    main article {
+        max-width: none;
+        margin: 0;
+    }
+
+    main article.art-01 {
+        grid-column: 1/3;
+        grid-row:1/3;
+    }
+
+    main article.art-02 {
+        grid-column: 3/4;
+        grid-row: 1/3;
+    }
+    main article.art-03 {
+        grid-column: 1/;
+    }
+
+    main article.art-04 {
+        grid-column: 2/4;
+    }
+
+    main article.art-05 {
+        grid-column: 4/5;
+        grid-row: 1/6
+    }
 }
