--- a/desafio12/mediaquery.css
+++ b/desafio12/mediaquery.css
@@ -1,48 +1,50 @@
 @media screen and (min-width:992px) {
     body {
+        width: 100vw;
+        height: 100vh;
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100%;
     }
 
     main {
-        width: 80vw;
-        height: 80vh;
-        background-color: orange;
+        min-width: 100%;
         display: grid;
-        grid-template-columns: repeat(4,25%);
-        grid-template-rows: repeat(5,20%);
-        align-items: center;
-        justify-content: center;
-        margin: 0;
+        grid-gap: 20px;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.5fr;
+        grid-template-rows: repeat(6,1fr);
+        align-items: stretch;
+        justify-items: center;
+        padding: 2rem;
     }
 
     main article {
-        max-width: none;
+        max-width: 800px;
         margin: 0;
+        text-align: left;
     }
 
     main article.art-01 {
-        grid-column: 1/3;
+        grid-column: 1/4;
         grid-row:1/3;
     }
 
     main article.art-02 {
-        grid-column: 3/4;
+        grid-column: 4/6;
         grid-row: 1/3;
     }
     main article.art-03 {
-        grid-column: 1/;
+        grid-column: 1/3;
+        grid-row: 3/5;
     }
 
     main article.art-04 {
-        grid-column: 2/4;
+        grid-column: 3/6;
+        grid-row: 3/5;
     }
 
     main article.art-05 {
-        grid-column: 4/5;
-        grid-row: 1/6
+        grid-column: 6/6;
+        grid-row: 1/5;
     }
 }
