--- a/desafio12/mediaquery.css
+++ b/desafio12/mediaquery.css
@@ -9,6 +9,7 @@
 
     main {
         min-width: 100%;
+        max-width: 1600px;
         display: grid;
         grid-gap: 20px;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.5fr;
