--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -17,11 +17,14 @@
     --Desaturated-Blue: hsl(238, 22%, 44%);
     --Light-Grayish-Blue: hsl(240, 75%, 98%);
     --Light-Gray: hsl(0, 0%, 75%);
+    --Bright-Blue: hsl(224, 93%, 58%);
+    --Moderate-Cyan: hsl(170, 45%, 43%);
 }
 
 body {
     font-family: var(--font-02);
     font-weight: 400;
+    background-color: var(--Light-Grayish-Blue);
 }
 
 
@@ -53,13 +56,141 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 90%;
+    width: 100vw;
+    padding: 0 2rem;
 }
 
+main section.first {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 main section.first > h1 {
     color:var(--Dark-Blue);
     text-align: center;
-    padding: 0 2rem 2rem 2rem;
+}
+
+main section.first > p {
+    text-align: center;
+    color: var(--Dark-Blue);
+    padding:  1rem;
+}
+
+main section.second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+    background-image: url(images/bg-curve-mobile.svg);
+    background-repeat: no-repeat;
+
+}
+
+main section.second > h2{
+    color: var(--Dark-Blue);
+    font-size: 18px;
+
+}
+
+main section.second > p {
+    text-align: justify;
+    color: var(--Desaturated-Blue);
+    padding: 1rem 0;
+    font-size: 1.1em;
+}
+
+main section.second > a {
+    text-decoration: none;
+    color: hsl(170, 45%, 43%);
+    padding-bottom: 10px;
+    border-bottom: 2px solid ;
+}
+
+main section.second > aside {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    background-color: white;
+    padding: 1rem;
+    margin: 2rem 0 4rem 0;
+    min-width: 300px;
+    text-align: left;
+    color: var(--Dark-Blue);
+    border-radius: 0.5rem;
+    box-shadow: 1px 1px 10px 1px var(--Light-Gray);
+}
+
+main section.second > aside .profile img {
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+main section.second > aside img {
+    width: 20px;
+}
+
+main section.second > aside .profile {
+    display: flex;
+    flex-direction: row;
+    font-size: 12px;
+}
+
+main section.third {
+    background-color: var(--Desaturated-Blue);
+    color: white;
+    width: 100vw;
+    padding: 2rem;
+    text-align: center;
+}
+
+main section.third > h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 2rem 0 3rem 0;
+    
+}
+
+main section.third > p {
+    color:var(--Light-Grayish-Blue);
+    font-size:1.2em;
+    padding-bottom: 1rem;
+}
+input {
+    width: 300px;
+    height: 2rem;
+    margin: 1rem ;
+    border-radius: 0.2rem;
+    border: 1px solid gray;
+    box-shadow: 0px 0px 1px 0px var(--Desaturated-Blue);
+}
+
+input::placeholder {
+    padding-left: 1rem;
+    color: var(--Light-Gray);
+}
+
+button {
+    width:300px;
+    height: 2rem;
+    color: white;
+    background-color: var(--Bright-Blue);
+    border-radius: 0.2rem;
+    border: none;
+    font-weight: bolder;
+    box-shadow: 1px 1px 5px 1px var(--Desaturated-Blue);
+}
+
+footer {
+    color:white;
+    background-color: var(--Dark-Blue);
+}
+
+footer img {
+    filter: brightness(100);
+    width: 100px;
 }
 
 
