--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -186,11 +186,14 @@ button {
 footer {
     color:white;
     background-color: var(--Dark-Blue);
+    display: flex;
+    flex-direction: column;
+    padding: 3.5rem;
 }
 
-footer img {
-    filter: brightness(100);
-    width: 100px;
+footer  img {
+    filter: invert(100) brightness(100);
+    width: 200px;
 }
 
 
