--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -191,9 +191,13 @@ footer {
     padding: 3.5rem;
 }
 
-footer  img {
+footer .logo {
     filter: invert(100) brightness(100);
     width: 200px;
+}
+
+footer .info {
+    display: flex;
 }
 
 
