--- a/desafio14/media-queries.css
+++ b/desafio14/media-queries.css
@@ -1,16 +1,57 @@
-@media screen and (min-width:768px) and (max-width:998px){
-    
+@media screen and (min-width:998px) and (max-width:1980px){
+    body {
+        font-size: 14px;
+    }
     main {
         width: 80vw;
+        display: flex;
+        flex-direction: column;
     }
 
     main section {
-        margin: 0rem 0 6rem 0;
-        width: 600px;
+        width: 800px;
         margin: auto;
     }
 
-    main section.second aside {
-        display: flex;
-
+    main section.first {
+        margin-bottom: 8rem;
     }
+
+    main section.third {
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+        
+    }
+
+    .tools-group {
+        display: flex;
+    }
+
+    main section.fourth > aside {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 4rem 0;
+    }
+
+    footer {
+        margin-top: 4rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+    }
+
+    .links a {
+        padding: 0 1rem;
+    }
+    button {
+        width: 200px;
+    }
+
+    #logo {
+        float: left;
+    }
+ 
