--- a/desafio14/mobile.css
+++ b/desafio14/mobile.css
@@ -87,7 +87,7 @@ main section.third h2 {
 }
 
 main section.fourth {   
-    margin: 1rem;
+    
 }
 
 main section.fourth .tools > img  {
@@ -135,7 +135,7 @@ footer .social-medias > img {
 }
 
 img.logo {
-    max-width: 350px;
+    width: 350px;
 }
 
 main section button {
@@ -158,3 +158,4 @@ button.mac {
     background-color: var(--Light-Blue);
     box-shadow: 0px 2px 0px  rgb(88, 139, 156);
 }
+
