--- a/desafio14/mobile.css
+++ b/desafio14/mobile.css
@@ -128,10 +128,13 @@ footer a {
     color: var(--DarkGrayish-Blue);
     text-decoration: none;
     margin: 2rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer .social-medias > img {
-    width: 30px;
+    max-width: 30px;
 }
 
 img.logo {
