--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -25,6 +25,7 @@ body {
     font-family: var(--font-02);
     font-weight: 400;
     background-color: var(--Light-Grayish-Blue);
+    text-align: center;
 }
 
 
@@ -71,7 +72,7 @@ main section.first > h1 {
     text-align: center;
 }
 
-main section.first > p {
+main section.first > .paragraph-01 p {
     text-align: center;
     color: var(--Dark-Blue);
     padding:  1rem;
@@ -101,17 +102,17 @@ main section.second > h2{
 
 }
 
-main section.second > p {
+main section.second > .paragraph-01 p {
     text-align: justify;
     color: var(--Desaturated-Blue);
-    padding: 1rem 0;
+    padding: 1rem 0 2rem 0;
     font-size: 1.1em;
 }
 
-main section.second > a {
+main section.second > .paragraph-01 > a {
     text-decoration: none;
     color: hsl(170, 45%, 43%);
-    padding-bottom: 10px;
+    padding: 2rem 0 0.5rem;
     border-bottom: 2px solid ;
 }
 
@@ -121,7 +122,7 @@ main section.second > aside {
     gap: 25px;
     background-color: white;
     padding: 1rem;
-    margin: 2rem 0 4rem 0;
+    margin: 5rem 0 4rem 0;
     min-width: 300px;
     text-align: left;
     color: var(--Dark-Blue);
@@ -204,6 +205,7 @@ footer {
     background-color: var(--Dark-Blue);
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     padding: 3.5rem;
     color: var(--Light-Gray);
 }
@@ -232,10 +234,8 @@ footer ul >li {
 }
 
 footer .social-media {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    margin: auto;
     padding-top: 2rem;
 }
 
