--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -22,6 +22,8 @@
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
     font-family: var(--font-02);
     font-weight: 400;
     background-color: var(--Light-Grayish-Blue);
@@ -165,6 +167,7 @@ main section.third > p {
     color:var(--Light-Grayish-Blue);
     font-size:1.2em;
     padding-bottom: 1rem;
+    font-weight: 200;
 }
 input {
     width: 300px;
