--- a/desafio16/mobile.css
+++ b/desafio16/mobile.css
@@ -26,6 +26,7 @@ body {
     width: 100vw;
     height: 100vh;
     padding: 0.5rem;
+    font-family: var(--font-primary);
 }
 
 header {
@@ -41,24 +42,94 @@ header ul {
     display: none;
 }
 
-main .img-mobile {
-    max-width: 100%;
-    margin: 0 auto;
+main .first  h1 {
+    color: var(--color-06);
+    font-size: 3em;
+    font-weight: 800;
+    line-height: 3rem;
+    padding: 1.4rem 0;
+}   
 
+main .img-mobile {
+    width: 100%;
+    margin: 0 auto;
+}
+
+main button {
+    background-color: var(--color-02);
+    color: var(--color-03);
+    text-transform: uppercase;
+    width: 200px;
+    padding:  1.5rem;
+    letter-spacing: 0.3rem;
+    text-align: center;
+    border: none;
+    margin: 0 0 2rem 0;
+    font-weight: bolder;
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.308);
+}
+
+main .second {
+    background-color: var(--color-06);
+    padding: 2rem;
+    margin: 1rem 0 3rem 0;
+    
+}
+
+main .second h2 {
+    color: var(--color-01);
+    padding: 0 0 1rem 0;
+    font-weight: bolder;
+    font-size: 2em;
+}
+
+main .second h3 {
+    color: var(--color-03);
+    font-size: 1.2em;
+    font-weight: bolder;
 }
 
 aside {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 aside .card {
-    height: 200px;
+    height: 150px;
     margin: 1.2rem 0;
+}
+
+aside .card-info span  {
+    color: var(--color-04);
+    font-size: 3em;
+}
+
+aside .card-info h4 {
+    color: var(--color-06);
+    font-size: 1.2em;
+    font-weight: 800;
 }
 
 aside img {
     float: left;
     height: 100%;
     padding-right: 1rem;
+}
+
+p {
+    color: var(--color-05);
+    font-weight: 500;
+    line-height: 1.5rem;
+    padding: 1.2rem 0;
+    
+}
+
+hr {
+    margin: 2rem 0;
+    border-color: var(--color-05);
+}
+
+#menu {
+    cursor: pointer;
 }
