--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -4,41 +4,40 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap');
 
 :root {
-    --font-01: 'Raleway', sans-serif;
-    --font-02: 'Open Sans', sans-serif;
-
-    --Dark-Blue: hsl(243, 87%, 12%);
-    --Desaturated-Blue: hsl(238, 22%, 44%);
-    --Light-Grayish-Blue: hsl(240, 75%, 98%);
-    --Light-Gray: hsl(0, 0%, 75%);
+    /*primary-color*/
+    --primary-color: hsl(243, 87%, 12%);
+    --primary-color1: hsl(238, 22%, 44%);
     --Bright-Blue: hsl(224, 93%, 58%);
     --Moderate-Cyan: hsl(170, 45%, 43%);
+    --Light-Grayish-Blue: hsl(240, 75%, 98%);
+    --Light-Gray: hsl(0, 0%, 75%);
+
+    --font-primary: 'Raleway', sans-serif;
+    --font-secundary: 'Open Sans', sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 body {
-    width: 100vw;
-    height: 100vh;
-    font-family: var(--font-02);
-    font-weight: 400;
-    background-color: var(--Light-Grayish-Blue);
+    font-size: 11px;
     text-align: center;
+    font-family: var(--font-secundary);
+    background-color: var(--Light-Grayish-Blue);
 }
 
-
-
 header {
-    width: 100vw;
     display: flex;
-    flex-direction:row;
-    align-items: center;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     height: 10vh;
+    width: 100vw;
     padding: 1rem;
 }
 
@@ -46,216 +45,195 @@ header img {
     width: 100px;
 }
 
-header nav a{
-    padding-left: 1rem;
-    text-decoration: none;
-    color: var(--Desaturated-Blue);
-    font-family: var(--font-01);
-    font-weight: 500;
+header ul {
+    display: flex;
+}
+
+ul li {
+    padding-left: 0.7rem;
+    font-size: 1.2em;
+    font-weight: 400;
+    font-family: var(--font-primary);
+    color: var(--primary-color);
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 100vw;
-    padding: 0 2rem;
-}
-
-main section.first {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-main section.first > h1 {
-    color:var(--Dark-Blue);
-    text-align: center;
-}
-
-main section.first > .paragraph-01 p {
-    text-align: center;
-    color: var(--Dark-Blue);
-    padding:  1rem;
-}
-
-main section > form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-main section.second {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 2rem;
-    background-image: url(images/bg-curve-mobile.svg);
-    background-repeat: no-repeat;
-
-}
-
-main section.second > h2{
-    color: var(--Dark-Blue);
-    font-size: 18px;
-
-}
-
-main section.second > .paragraph-01 p {
-    text-align: justify;
-    color: var(--Desaturated-Blue);
-    padding: 1rem 0 2rem 0;
-    font-size: 1.1em;
-}
-
-main section.second > .paragraph-01 > a {
-    text-decoration: none;
-    color: hsl(170, 45%, 43%);
-    padding: 2rem 0 0.5rem;
-    border-bottom: 2px solid ;
-}
-
-main section.second > aside {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    background-color: white;
     padding: 1rem;
-    margin: 5rem 0 4rem 0;
-    min-width: 300px;
-    text-align: left;
-    color: var(--Dark-Blue);
-    border-radius: 0.5rem;
-    box-shadow: 1px 1px 10px 1px var(--Light-Gray);
 }
 
-main section.second > aside .profile img {
-    width: 40px;
-    border-radius: 50%;
-    margin-right: 1rem;
+.fisrt-art h1 {
+    font-family: var(--font-primary);
+    font-weight: 800;
+    font-size:2.2em ;
+    color: var(--primary-color);
+    margin-bottom: 2rem;
 }
 
-main section.second > aside img {
-    width: 20px;
+.fisrt-art p {
+    color: var(--primary-color);
+    font-size: 1.6em;
+    margin-bottom: 2rem;
 }
 
-main section.second > aside .profile {
+
+.inputs {
     display: flex;
-    flex-direction: row;
-    font-size: 12px;
+    flex-direction: column;
+    gap: 0.5rem;
+    max-width: 80%;
+    margin: 0 auto;
+}
+.inputs input[type=email] {
+    border: 1px  solid var(--primary-color);
 }
 
-main section.third {
-    background-color: var(--Desaturated-Blue);
-    color: white;
-    width: 100vw;
-    padding: 2rem;
-    text-align: center;
-}
-
-main section.third > h2 {
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: 2rem 0 3rem 0;
-    
-}
-
-main section.third > p {
-    color:var(--Light-Grayish-Blue);
-    font-size:1.2em;
-    padding-bottom: 1rem;
-    font-weight: 200;
-}
-input {
-    width: 300px;
-    height: 2rem;
-    margin: 1rem ;
-    border-radius: 0.2rem;
-    border: 1px solid gray;
-    box-shadow: 0px 0px 1px 0px var(--Desaturated-Blue);
-}
-
-input::placeholder {
-    padding-left: 1rem;
-    color: var(--Light-Gray);
-}
-
-input:active {
-    border: 1px solid red;
-}
-
-button {
-    width:300px;
-    height: 2rem;
-    color: white;
+.inputs input[type=submit] {
     background-color: var(--Bright-Blue);
-    border-radius: 0.2rem;
     border: none;
-    font-weight: bolder;
-    box-shadow: 1px 1px 5px 1px var(--Desaturated-Blue);
-    cursor: pointer;
+    color: #fff;
+    font-weight: 800;
+    box-shadow: 1px 1px 9px 2px rgba(0, 0, 255, 0.473);
 }
 
-button:hover {
-    background-color: cornflowerblue;
+
+.second-art h2 {
+    color: var(--primary-color);
+    font-family: var(--font-primary);
+    font-weight: 600;
+    margin-bottom: 1.5rem;
 }
 
-footer {
-    color:white;
-    background-color: var(--Dark-Blue);
+.second-art p {
+    color: var(--primary-color1);
+    text-align: left;
+    margin-bottom: 1.5rem;
+    font-weight: 400;
+    font-size: 1.4em;
+}
+
+.second-art span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.5em;
+    color: var(--Moderate-Cyan);
+}
+
+hr {
+    color: var(--Moderate-Cyan);
+    border: 1px solid var(--Moderate-Cyan);
+    width: 60%;
+    margin: 0 auto;
+}
+aside {
+    width: 90%;
+    color: var(--primary-color);
+    background-color: white;
+    box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.13);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 3.5rem;
-    color: var(--Light-Gray);
-}
-
-footer ul {
-    list-style: none;
-}
-
-footer .logo {
-    filter: invert(100) brightness(100);
-    width: 150px;
-    padding-bottom: 2rem;
-}
-
-footer .info {
-    display: flex;
-    padding-bottom: 1rem;
-}
-
-footer .info > p {
-    margin-left: 1rem;
-}
-
-footer ul >li {
+    text-align: left;
+    gap: 1rem;
     padding: 1rem;
+    margin:2rem 0
 }
 
-footer .social-media {
-    display: block;
-    margin: auto;
-    padding-top: 2rem;
+aside .profile {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
 }
 
-footer .social-media img {
-    border: 1px solid black;
+aside .profile img {
     border-radius: 50%;
-    padding: 5px;
-    filter:invert(100);
-    width: 30px;
-    margin: 10px;
-
+    width: 40px;
 }
 
+aside p {
+    font-size: 1.2em;
+}
 
+.profile-name h3 {
+   font-size: 1.5em;
+   font-weight: 600;
+   font-family: var(--font-primary);
+   padding:0 0 0.2rem 1.3rem;
+}
+
+.profile-name span {
+    color: var(--primary-color);
+    padding-left: 1.3rem;
+}
+
+span .arrow {
+    width: 30px;
+}
+
+.extra {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--primary-color1);
+    width: 100vw;
+    padding: 2rem;
+}
+
+.extra h2 {
+    font-family: var(--font-primary);
+    color: var(--Light-Grayish-Blue);
+    font-size: 2em;
+    margin: 3rem 0 2rem 0;
+}
+
+.extra p {
+    color: var(--Light-Gray);
+    font-size: 1.2em;
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.inputs-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.inputs-2 input[type=email] {
+    border: none;
+    width: 250px;
+}
+
+.inputs-2 input[type=submit] {
+    background-color: var(--Bright-Blue);
+    border: none;
+    color: #fff;
+    font-weight: 600;
+    box-shadow: 1px 1px 9px 2px rgba(0, 0, 255, 0.281);
+    width: 250px;
+}
+
+input {
+    border-radius: 0.3rem;
+    padding: 0.8rem ;
+}
 .ilustration {
-    width: 300px;
-    display: block;
-    margin: auto;
-    padding: 3rem 0;
+    width: 100%;
+    margin: 0 auto;
+    padding: 5rem 0;
+}
+
+footer {
+    background-color: var(--primary-color);
+    color: #fff;
+    text-align: left;
+    padding: 2rem;
 }
