--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -127,7 +127,7 @@ main {
 hr {
     color: var(--Moderate-Cyan);
     border: 1px solid var(--Moderate-Cyan);
-    width: 60%;
+    max-width: 60%;
     margin: 0 auto;
 }
 aside {
