--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -23,6 +23,93 @@
 }
 
 body {
-    padding: 2rem;
     background-color: #fff;
+    width: 100vw;
+    height: 100vh;
+    font-family: var(--font-02);
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem 2rem 4rem 2rem;
+}
+
+header img {
+    width: 120px;
+}
+
+header ul {
+    display: flex;
+    gap: 10px;
+}
+
+header ul a{
+    text-decoration: none;
+    font-family: var(--font-02);
+    color: var(--Desaturated-Blue);
+    font-weight: 400;
+
+}
+
+.first-s {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem;
+}
+
+.first-s h1 {
+    font-family: var(--font-02);
+    color: var(--Very-Dark-Blue);
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+.first-s p {
+    text-align: center;
+    margin: 1rem;
+    color: var(--Very-Dark-Blue);
+    font-weight: 400;
+    padding-bottom: 1rem;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+    margin: 1rem;
+}
+
+
+
+
+
+
+input {
+    padding: 0.8rem;
+}
+
+input::placeholder {
+    color: var(--Light-Gray);
+}
+button {
+    background-color: var(--Bright-Blue);
+    color: #fff;
+    font-weight: 600;
+    border-radius: 0.3rem;
+    font-family: var(--font-01);
+    padding: 0.8rem;
+    border: none;
+    box-shadow: 1px 1px 10px 1px var(--Desaturated-Blue);
+}
+
+.ilustration {
+    width: 90%;
+    margin: 2rem auto;
+    display: block;
+
 }
