--- a/desafio13/mediaquery.css
+++ b/desafio13/mediaquery.css
@@ -15,7 +15,8 @@
    
     header, main, footer {
         max-width: 1400px;
-        margin: 0 auto;
+        margin: 2rem auto;
+        transition: cubic-bezier(0.19, 1, 0.22, 1);
     }
    
     .first-s, .second-s  {
